--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <main class=" ">
         <div class="top ">
           <img class="nft" src="images/image-equilibrium.jpg" alt="NFT image" >
-          <!-- <img class="eye" src="images/icon-view.svg" alt="eye image" > -->
+          <img class="eye" src="images/icon-view.svg" alt="eye image" >
         </div>
         <div>
           <div class="content">
@@ -32,11 +32,12 @@
       <footer class="">
         <img src="images/image-avatar.png" alt="personal image">
         <p> Creation of <span> Jules Wyvern </span></p>  
-      </footer>
-      <div class="attribution">
+        <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="#">Your Name Here</a>.
       </div>
+      </footer>
+      
     </div>
   </body>
 </html>
